add_definitions("-DBUILD_GEOMETRY_LIB")


get_target_property(TOOLS_HEADERS tools PUBLIC_HEADER)
get_target_property(TOOLS_HEADERS_DIR tools INCLUDE_DIRECTORIES)

SET(LIBRIR_GEOMETRY_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/geometry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Polygon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DrawPolygon.cpp
)

#~ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
#~ include_directories(${TOOLS_HEADERS_DIR})

SET(LIBRIR_GEOMETRY_SRC ${LIBRIR_GEOMETRY_SRC} PARENT_SCOPE)


add_library(geometry ${LIBRIR_GEOMETRY_SRC})

set(GEOMETRY_HEADERS 
	${CMAKE_CURRENT_SOURCE_DIR}/Primitives.h
	${CMAKE_CURRENT_SOURCE_DIR}/Polygon.h
	${CMAKE_CURRENT_SOURCE_DIR}/DrawPolygon.h
	${CMAKE_CURRENT_SOURCE_DIR}/geometry.h
)

target_include_directories(geometry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(geometry tools)

# install(TARGETS geometry
         # ARCHIVE DESTINATION lib
         # LIBRARY DESTINATION lib
         # RUNTIME DESTINATION bin
		 # )

set_target_properties(geometry PROPERTIES
	PUBLIC_HEADER "${GEOMETRY_HEADERS}"
	#~ LIBRARY_OUTPUT_DIRECTORY ${LIB_DESTINATION_DIR}
	#~ RUNTIME_OUTPUT_DIRECTORY ${BIN_DESTINATION_DIR}
)

# set(GEOMETRY_HEADERS ${GEOMETRY_HEADERS} PARENT_SCOPE)
